--- a/index.html
+++ b/index.html
@@ -1,132 +1,41 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Commerce Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        .container {
-            display: flex;
-            justify-content: space-between;
-            margin: 20px;
-        }
-
-        #products, #cart {
-            flex: 1;
-        }
-
-        .product {
-            border: 1px solid #ccc;
-            margin-bottom: 20px;
-            padding: 10px;
-        }
-
-        .cart-item {
-            border-bottom: 1px solid #ccc;
-            padding: 10px;
-        }
-
-        #checkout-btn {
-            display: block;
-            margin-top: 20px;
-            width: 100%;
-            padding: 10px;
-            background-color: #333;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-        }
-
-        #checkout-btn:hover {
-            background-color: #555;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
+    <title>Coming Soon Page</title>
 </head>
 <body>
-    <header>
-        <h1>E-Commerce Website</h1>
-    </header>
-
     <div class="container">
-        <section id="products">
-            <!-- Product listing will be dynamically generated here -->
-        </section>
-
-        <aside id="cart">
-            <h2>Shopping Cart</h2>
-            <ul id="cart-items">
-                <!-- Shopping cart items will be dynamically generated here -->
-            </ul>
-            <button id="checkout-btn">Checkout</button>
-        </aside>
+        <img src="./images/logo.png" alt="" class="logo">
+        <div class="content">
+            <p>Website Is Under Maintenance</p>
+            <h1>We're <span>Launching</span> Soon</h1>
+            <div class="launch__time">
+                <div>
+                    <p id="days">00</p>
+                    <span>Days</span>
+                </div>
+                <div>
+                    <p id="hours">00</p>
+                    <span>Hours</span>
+                </div>
+                <div>
+                    <p id="minutes">00</p>
+                    <span>Minutes</span>
+                </div>
+                <div>
+                    <p id="seconds">00</p>
+                    <span>Seconds</span>
+                </div>
+            </div>
+            <button type="submit">Learn More <img src="./images/triangle.png" alt=""></button>
+        </div>
+        <img src="./images/rocket.png" alt="" class="rocket">
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Sample product data
-            const products = [
-                { id: 1, name: 'Product 1', price: 10 },
-                { id: 2, name: 'Product 2', price: 20 },
-                { id: 3, name: 'Product 3', price: 30 }
-            ];
-
-            // Function to display products
-            function displayProducts() {
-                const productsSection = document.getElementById('products');
-                productsSection.innerHTML = '';
-                products.forEach(product => {
-                    const productElement = document.createElement('div');
-                    productElement.classList.add('product');
-                    productElement.innerHTML = `
-                        <h3>${product.name}</h3>
-                        <p>Price: $${product.price}</p>
-                        <button class="add-to-cart" data-id="${product.id}">Add to Cart</button>
-                    `;
-                    productsSection.appendChild(productElement);
-                });
-            }
-
-            // Function to handle adding items to cart
-            function addToCart(productId) {
-                const product = products.find(p => p.id === productId);
-                if (product) {
-                    const cartItems = document.getElementById('cart-items');
-                    const cartItem = document.createElement('li');
-                    cartItem.classList.add('cart-item');
-                    cartItem.textContent = `${product.name} - $${product.price}`;
-                    cartItems.appendChild(cartItem);
-                }
-            }
-
-            // Display products initially
-            displayProducts();
-
-            // Event listener for Add to Cart buttons
-            document.querySelectorAll('.add-to-cart').forEach(button => {
-                button.addEventListener('click', function () {
-                    const productId = parseInt(this.getAttribute('data-id'));
-                    addToCart(productId);
-                });
-            });
-
-            // Event listener for Checkout button
-            document.getElementById('checkout-btn').addEventListener('click', function () {
-                alert('Checkout functionality will be implemented later.');
-            });
-        });
-    </script>
+<script src="./app.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 </body>
 </html>
