--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <img src="./images/rocket.png" alt="" class="rocket">
     </div>
-<script src="./app.js"></script>
+<script src="./script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 </body>
 </html>
