--- a/index.html
+++ b/index.html
@@ -8,27 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <img src="./images/logo.png" alt="" class="logo">
+        <h1 class="logo">KNIGHT SHOP</h1>
         <div class="content">
             <p>Website Is Under Maintenance</p>
             <h1>We're <span>Launching</span> Soon</h1>
             <div class="launch__time">
-                <div>
-                    <p id="days">00</p>
-                    <span>Days</span>
-                </div>
-                <div>
-                    <p id="hours">00</p>
-                    <span>Hours</span>
-                </div>
-                <div>
-                    <p id="minutes">00</p>
-                    <span>Minutes</span>
-                </div>
-                <div>
-                    <p id="seconds">00</p>
-                    <span>Seconds</span>
-                </div>
+               
             </div>
             <button type="submit">Learn More <img src="./images/triangle.png" alt=""></button>
         </div>
@@ -37,4 +22,16 @@
 <script src="./app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 </body>
+<footer>
+    <div class="footer">
+        <div class="footer__content">
+            <div class="footer__content__left">
+                <h2>KNIGHT SHOP</h2>
+                <p>© 2024 KNIGHT SHOP. All rights reserved</p>
+                <p>Made by <a href="https://azhardev.me/">Azhar</a></p>
+            </div>
+           
+        </div>
+    </div>
+</footer>
 </html>
